L4/A4-reference-implementation/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> final_program
Rule 1     final_program -> program_content
Rule 2     program_content -> function_dec program_content
Rule 3     program_content -> function_body program_content
Rule 4     program_content -> program program_content
Rule 5     program_content -> function_dec
Rule 6     program_content -> function_body
Rule 7     program_content -> program
Rule 8     program_content -> declaration
Rule 9     program_content -> declaration program_content
Rule 10    function_dec -> datatype pointer LPAREN arguments RPAREN SEMICOLON
Rule 11    function_dec -> VOID namevar LPAREN arguments RPAREN SEMICOLON
Rule 12    arguments -> datatype pointer
Rule 13    arguments -> datatype namevar
Rule 14    arguments -> datatype pointer COMMA arguments
Rule 15    arguments -> datatype namevar COMMA arguments
Rule 16    arguments -> epsilon
Rule 17    function_body -> datatype pointer LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
Rule 18    function_body -> VOID namevar LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE
Rule 19    return_stat -> RETURN LEFT SEMICOLON
Rule 20    return_stat -> RETURN ID SEMICOLON
Rule 21    return_stat2 -> RETURN SEMICOLON
Rule 22    return_stat2 -> epsilon
Rule 23    function_call -> NAME LPAREN arglist RPAREN SEMICOLON
Rule 24    function_call -> NAME LPAREN RPAREN SEMICOLON
Rule 25    arglist -> LEFT
Rule 26    arglist -> ID
Rule 27    arglist -> LEFT COMMA arglist
Rule 28    arglist -> ID COMMA arglist
Rule 29    program -> VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
Rule 30    function_content -> assignment_statement
Rule 31    function_content -> while_stat
Rule 32    function_content -> if_stat
Rule 33    function_content -> function_call
Rule 34    function_content -> assignment_statement function_content
Rule 35    function_content -> while_stat function_content
Rule 36    function_content -> if_stat function_content
Rule 37    function_content -> function_call function_content
Rule 38    function_content -> declaration
Rule 39    function_content -> declaration function_content
Rule 40    function_content -> epsilon
Rule 41    declaration -> datatype varlist SEMICOLON
Rule 42    datatype -> INT
Rule 43    datatype -> FLOAT
Rule 44    namevar -> NAME
Rule 45    varlist -> namevar COMMA varlist
Rule 46    varlist -> pointer COMMA varlist
Rule 47    varlist -> namevar
Rule 48    varlist -> pointer
Rule 49    pointer -> ASTERISK pointer
Rule 50    pointer -> ASTERISK namevar
Rule 51    assignment_statement -> ID EQUAL RIGHT SEMICOLON
Rule 52    assignment_statement -> LEFT EQUAL expression SEMICOLON
Rule 53    assignment_statement -> ID EQUAL function_call
Rule 54    assignment_statement -> LEFT EQUAL function_call
Rule 55    ID -> NAME
Rule 56    LEFT -> ASTERISK var
Rule 57    RIGHT -> AMPERSAND var
Rule 58    expression -> expression PLUS expression
Rule 59    expression -> expression MINUS expression
Rule 60    expression -> expression ASTERISK expression
Rule 61    expression -> expression DIVIDE expression
Rule 62    expression -> var
Rule 63    expression -> NUMBERvar
Rule 64    expression -> LPAREN expression RPAREN
Rule 65    NUMBERvar -> NUMBER
Rule 66    NUMBERvar -> NUMBER2
Rule 67    var -> ASTERISK var
Rule 68    var -> AMPERSAND var
Rule 69    var -> NAME
Rule 70    expression -> MINUS expression
Rule 71    code_block -> if_stat
Rule 72    code_block -> while_stat
Rule 73    code_block -> assignment_statement
Rule 74    code_block -> LBRACE function_content RBRACE
Rule 75    while_stat -> WHILE LPAREN b_expression RPAREN code_block
Rule 76    if_stat -> IF LPAREN b_expression RPAREN code_block
Rule 77    if_stat -> IF LPAREN b_expression RPAREN code_block ELSE code_block
Rule 78    b_expression -> expression sign1 expression
Rule 79    b_expression -> b_expression sign2 b_expression
Rule 80    b_expression -> LPAREN b_expression RPAREN
Rule 81    sign1 -> EQUALS
Rule 82    sign1 -> NOTEQUAL
Rule 83    sign1 -> GREATER
Rule 84    sign1 -> LESSER
Rule 85    sign1 -> GREATEREQ
Rule 86    sign1 -> LESSEREQ
Rule 87    sign2 -> LOGOR
Rule 88    sign2 -> LOGAND
Rule 89    epsilon -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 57 68
ASTERISK             : 49 50 56 60 67
COMMA                : 14 15 27 28 45 46
DIVIDE               : 61
ELSE                 : 77
EQUAL                : 51 52 53 54
EQUALS               : 81
FLOAT                : 43
GREATER              : 83
GREATEREQ            : 85
IF                   : 76 77
INT                  : 42
LBRACE               : 17 18 29 74
LESSER               : 84
LESSEREQ             : 86
LOGAND               : 88
LOGOR                : 87
LPAREN               : 10 11 17 18 23 24 29 64 75 76 77 80
MAIN                 : 29
MINUS                : 59 70
NAME                 : 23 24 44 55 69
NOTEQUAL             : 82
NUMBER               : 65
NUMBER2              : 66
PLUS                 : 58
RBRACE               : 17 18 29 74
RETURN               : 19 20 21
RPAREN               : 10 11 17 18 23 24 29 64 75 76 77 80
SEMICOLON            : 10 11 19 20 21 23 24 41 51 52
VOID                 : 11 18 29
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

ID                   : 20 26 28 51 53
LEFT                 : 19 25 27 52 54
NUMBERvar            : 63
RIGHT                : 51
arglist              : 23 27 28
arguments            : 10 11 14 15 17 18
assignment_statement : 30 34 73
b_expression         : 75 76 77 79 79 80
code_block           : 75 76 77 77
datatype             : 10 12 13 14 15 17 41
declaration          : 8 9 38 39
epsilon              : 16 22 40
expression           : 52 58 58 59 59 60 60 61 61 64 70 78 78
final_program        : 0
function_body        : 3 6
function_call        : 33 37 53 54
function_content     : 17 18 29 34 35 36 37 39 74
function_dec         : 2 5
if_stat              : 32 36 71
namevar              : 11 13 15 18 45 47 50
pointer              : 10 12 14 17 46 48 49
program              : 4 7
program_content      : 1 2 3 4 9
return_stat          : 17
return_stat2         : 18
sign1                : 78
sign2                : 79
var                  : 56 57 62 67 68
varlist              : 41 45 46
while_stat           : 31 35 72

Parsing method: LALR

state 0

    (0) S' -> . final_program
    (1) final_program -> . program_content
    (2) program_content -> . function_dec program_content
    (3) program_content -> . function_body program_content
    (4) program_content -> . program program_content
    (5) program_content -> . function_dec
    (6) program_content -> . function_body
    (7) program_content -> . program
    (8) program_content -> . declaration
    (9) program_content -> . declaration program_content
    (10) function_dec -> . datatype pointer LPAREN arguments RPAREN SEMICOLON
    (11) function_dec -> . VOID namevar LPAREN arguments RPAREN SEMICOLON
    (17) function_body -> . datatype pointer LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
    (18) function_body -> . VOID namevar LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE
    (29) program -> . VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
    (41) declaration -> . datatype varlist SEMICOLON
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

    VOID            shift and go to state 1
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

    final_program                  shift and go to state 4
    program_content                shift and go to state 7
    datatype                       shift and go to state 8
    function_dec                   shift and go to state 5
    program                        shift and go to state 3
    declaration                    shift and go to state 6
    function_body                  shift and go to state 2

state 1

    (11) function_dec -> VOID . namevar LPAREN arguments RPAREN SEMICOLON
    (18) function_body -> VOID . namevar LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE
    (29) program -> VOID . MAIN LPAREN RPAREN LBRACE function_content RBRACE
    (44) namevar -> . NAME

    MAIN            shift and go to state 13
    NAME            shift and go to state 11

    namevar                        shift and go to state 12

state 2

    (3) program_content -> function_body . program_content
    (6) program_content -> function_body .
    (2) program_content -> . function_dec program_content
    (3) program_content -> . function_body program_content
    (4) program_content -> . program program_content
    (5) program_content -> . function_dec
    (6) program_content -> . function_body
    (7) program_content -> . program
    (8) program_content -> . declaration
    (9) program_content -> . declaration program_content
    (10) function_dec -> . datatype pointer LPAREN arguments RPAREN SEMICOLON
    (11) function_dec -> . VOID namevar LPAREN arguments RPAREN SEMICOLON
    (17) function_body -> . datatype pointer LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
    (18) function_body -> . VOID namevar LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE
    (29) program -> . VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
    (41) declaration -> . datatype varlist SEMICOLON
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

    $end            reduce using rule 6 (program_content -> function_body .)
    VOID            shift and go to state 1
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

    program_content                shift and go to state 14
    datatype                       shift and go to state 8
    function_dec                   shift and go to state 5
    program                        shift and go to state 3
    declaration                    shift and go to state 6
    function_body                  shift and go to state 2

state 3

    (4) program_content -> program . program_content
    (7) program_content -> program .
    (2) program_content -> . function_dec program_content
    (3) program_content -> . function_body program_content
    (4) program_content -> . program program_content
    (5) program_content -> . function_dec
    (6) program_content -> . function_body
    (7) program_content -> . program
    (8) program_content -> . declaration
    (9) program_content -> . declaration program_content
    (10) function_dec -> . datatype pointer LPAREN arguments RPAREN SEMICOLON
    (11) function_dec -> . VOID namevar LPAREN arguments RPAREN SEMICOLON
    (17) function_body -> . datatype pointer LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
    (18) function_body -> . VOID namevar LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE
    (29) program -> . VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
    (41) declaration -> . datatype varlist SEMICOLON
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

    $end            reduce using rule 7 (program_content -> program .)
    VOID            shift and go to state 1
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

    program_content                shift and go to state 15
    datatype                       shift and go to state 8
    function_dec                   shift and go to state 5
    program                        shift and go to state 3
    declaration                    shift and go to state 6
    function_body                  shift and go to state 2

state 4

    (0) S' -> final_program .



state 5

    (2) program_content -> function_dec . program_content
    (5) program_content -> function_dec .
    (2) program_content -> . function_dec program_content
    (3) program_content -> . function_body program_content
    (4) program_content -> . program program_content
    (5) program_content -> . function_dec
    (6) program_content -> . function_body
    (7) program_content -> . program
    (8) program_content -> . declaration
    (9) program_content -> . declaration program_content
    (10) function_dec -> . datatype pointer LPAREN arguments RPAREN SEMICOLON
    (11) function_dec -> . VOID namevar LPAREN arguments RPAREN SEMICOLON
    (17) function_body -> . datatype pointer LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
    (18) function_body -> . VOID namevar LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE
    (29) program -> . VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
    (41) declaration -> . datatype varlist SEMICOLON
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

    $end            reduce using rule 5 (program_content -> function_dec .)
    VOID            shift and go to state 1
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

    program_content                shift and go to state 16
    datatype                       shift and go to state 8
    function_dec                   shift and go to state 5
    program                        shift and go to state 3
    declaration                    shift and go to state 6
    function_body                  shift and go to state 2

state 6

    (8) program_content -> declaration .
    (9) program_content -> declaration . program_content
    (2) program_content -> . function_dec program_content
    (3) program_content -> . function_body program_content
    (4) program_content -> . program program_content
    (5) program_content -> . function_dec
    (6) program_content -> . function_body
    (7) program_content -> . program
    (8) program_content -> . declaration
    (9) program_content -> . declaration program_content
    (10) function_dec -> . datatype pointer LPAREN arguments RPAREN SEMICOLON
    (11) function_dec -> . VOID namevar LPAREN arguments RPAREN SEMICOLON
    (17) function_body -> . datatype pointer LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
    (18) function_body -> . VOID namevar LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE
    (29) program -> . VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
    (41) declaration -> . datatype varlist SEMICOLON
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

    $end            reduce using rule 8 (program_content -> declaration .)
    VOID            shift and go to state 1
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

    program_content                shift and go to state 17
    datatype                       shift and go to state 8
    function_dec                   shift and go to state 5
    program                        shift and go to state 3
    declaration                    shift and go to state 6
    function_body                  shift and go to state 2

state 7

    (1) final_program -> program_content .

    $end            reduce using rule 1 (final_program -> program_content .)


state 8

    (10) function_dec -> datatype . pointer LPAREN arguments RPAREN SEMICOLON
    (17) function_body -> datatype . pointer LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
    (41) declaration -> datatype . varlist SEMICOLON
    (49) pointer -> . ASTERISK pointer
    (50) pointer -> . ASTERISK namevar
    (45) varlist -> . namevar COMMA varlist
    (46) varlist -> . pointer COMMA varlist
    (47) varlist -> . namevar
    (48) varlist -> . pointer
    (44) namevar -> . NAME

    ASTERISK        shift and go to state 18
    NAME            shift and go to state 11

    namevar                        shift and go to state 19
    varlist                        shift and go to state 20
    pointer                        shift and go to state 21

state 9

    (43) datatype -> FLOAT .

    NAME            reduce using rule 43 (datatype -> FLOAT .)
    ASTERISK        reduce using rule 43 (datatype -> FLOAT .)


state 10

    (42) datatype -> INT .

    NAME            reduce using rule 42 (datatype -> INT .)
    ASTERISK        reduce using rule 42 (datatype -> INT .)


state 11

    (44) namevar -> NAME .

    COMMA           reduce using rule 44 (namevar -> NAME .)
    SEMICOLON       reduce using rule 44 (namevar -> NAME .)
    LPAREN          reduce using rule 44 (namevar -> NAME .)
    RPAREN          reduce using rule 44 (namevar -> NAME .)


state 12

    (11) function_dec -> VOID namevar . LPAREN arguments RPAREN SEMICOLON
    (18) function_body -> VOID namevar . LPAREN arguments RPAREN LBRACE function_content return_stat2 RBRACE

    LPAREN          shift and go to state 22


state 13

    (29) program -> VOID MAIN . LPAREN RPAREN LBRACE function_content RBRACE

    LPAREN          shift and go to state 23


state 14

    (3) program_content -> function_body program_content .

    $end            reduce using rule 3 (program_content -> function_body program_content .)


state 15

    (4) program_content -> program program_content .

    $end            reduce using rule 4 (program_content -> program program_content .)


state 16

    (2) program_content -> function_dec program_content .

    $end            reduce using rule 2 (program_content -> function_dec program_content .)


state 17

    (9) program_content -> declaration program_content .

    $end            reduce using rule 9 (program_content -> declaration program_content .)


state 18

    (49) pointer -> ASTERISK . pointer
    (50) pointer -> ASTERISK . namevar
    (49) pointer -> . ASTERISK pointer
    (50) pointer -> . ASTERISK namevar
    (44) namevar -> . NAME

    ASTERISK        shift and go to state 18
    NAME            shift and go to state 11

    pointer                        shift and go to state 24
    namevar                        shift and go to state 25

state 19

    (45) varlist -> namevar . COMMA varlist
    (47) varlist -> namevar .

    COMMA           shift and go to state 26
    SEMICOLON       reduce using rule 47 (varlist -> namevar .)


state 20

    (41) declaration -> datatype varlist . SEMICOLON

    SEMICOLON       shift and go to state 27


state 21

    (10) function_dec -> datatype pointer . LPAREN arguments RPAREN SEMICOLON
    (17) function_body -> datatype pointer . LPAREN arguments RPAREN LBRACE function_content return_stat RBRACE
    (46) varlist -> pointer . COMMA varlist
    (48) varlist -> pointer .

    LPAREN          shift and go to state 29
    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 48 (varlist -> pointer .)


state 22

    (11) function_dec -> VOID namevar LPAREN . arguments RPAREN SEMICOLON
    (18) function_body -> VOID namevar LPAREN . arguments RPAREN LBRACE function_content return_stat2 RBRACE
    (12) arguments -> . datatype pointer
    (13) arguments -> . datatype namevar
    (14) arguments -> . datatype pointer COMMA arguments
    (15) arguments -> . datatype namevar COMMA arguments
    (16) arguments -> . epsilon
    (42) datatype -> . INT
    (43) datatype -> . FLOAT
    (89) epsilon -> .

    INT             shift and go to state 10
    FLOAT           shift and go to state 9
    RPAREN          reduce using rule 89 (epsilon -> .)

    datatype                       shift and go to state 30
    epsilon                        shift and go to state 31
    arguments                      shift and go to state 32

state 23

    (29) program -> VOID MAIN LPAREN . RPAREN LBRACE function_content RBRACE

    RPAREN          shift and go to state 33


state 24

    (49) pointer -> ASTERISK pointer .

    COMMA           reduce using rule 49 (pointer -> ASTERISK pointer .)
    SEMICOLON       reduce using rule 49 (pointer -> ASTERISK pointer .)
    LPAREN          reduce using rule 49 (pointer -> ASTERISK pointer .)
    RPAREN          reduce using rule 49 (pointer -> ASTERISK pointer .)


state 25

    (50) pointer -> ASTERISK namevar .

    COMMA           reduce using rule 50 (pointer -> ASTERISK namevar .)
    SEMICOLON       reduce using rule 50 (pointer -> ASTERISK namevar .)
    LPAREN          reduce using rule 50 (pointer -> ASTERISK namevar .)
    RPAREN          reduce using rule 50 (pointer -> ASTERISK namevar .)


state 26

    (45) varlist -> namevar COMMA . varlist
    (45) varlist -> . namevar COMMA varlist
    (46) varlist -> . pointer COMMA varlist
    (47) varlist -> . namevar
    (48) varlist -> . pointer
    (44) namevar -> . NAME
    (49) pointer -> . ASTERISK pointer
    (50) pointer -> . ASTERISK namevar

    NAME            shift and go to state 11
    ASTERISK        shift and go to state 18

    varlist                        shift and go to state 34
    pointer                        shift and go to state 35
    namevar                        shift and go to state 19

state 27

    (41) declaration -> datatype varlist SEMICOLON .

    VOID            reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    INT             reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    FLOAT           reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    $end            reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    WHILE           reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    IF              reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    NAME            reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    ASTERISK        reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    RBRACE          reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)
    RETURN          reduce using rule 41 (declaration -> datatype varlist SEMICOLON .)


state 28

    (46) varlist -> pointer COMMA . varlist
    (45) varlist -> . namevar COMMA varlist
    (46) varlist -> . pointer COMMA varlist
    (47) varlist -> . namevar
    (48) varlist -> . pointer
    (44) namevar -> . NAME
    (49) pointer -> . ASTERISK pointer
    (50) pointer -> . ASTERISK namevar

    NAME            shift and go to state 11
    ASTERISK        shift and go to state 18

    varlist                        shift and go to state 36
    pointer                        shift and go to state 35
    namevar                        shift and go to state 19

state 29

    (10) function_dec -> datatype pointer LPAREN . arguments RPAREN SEMICOLON
    (17) function_body -> datatype pointer LPAREN . arguments RPAREN LBRACE function_content return_stat RBRACE
    (12) arguments -> . datatype pointer
    (13) arguments -> . datatype namevar
    (14) arguments -> . datatype pointer COMMA arguments
    (15) arguments -> . datatype namevar COMMA arguments
    (16) arguments -> . epsilon
    (42) datatype -> . INT
    (43) datatype -> . FLOAT
    (89) epsilon -> .

    INT             shift and go to state 10
    FLOAT           shift and go to state 9
    RPAREN          reduce using rule 89 (epsilon -> .)

    datatype                       shift and go to state 30
    epsilon                        shift and go to state 31
    arguments                      shift and go to state 37

state 30

    (12) arguments -> datatype . pointer
    (13) arguments -> datatype . namevar
    (14) arguments -> datatype . pointer COMMA arguments
    (15) arguments -> datatype . namevar COMMA arguments
    (49) pointer -> . ASTERISK pointer
    (50) pointer -> . ASTERISK namevar
    (44) namevar -> . NAME

    ASTERISK        shift and go to state 18
    NAME            shift and go to state 11

    pointer                        shift and go to state 39
    namevar                        shift and go to state 38

state 31

    (16) arguments -> epsilon .

    RPAREN          reduce using rule 16 (arguments -> epsilon .)


state 32

    (11) function_dec -> VOID namevar LPAREN arguments . RPAREN SEMICOLON
    (18) function_body -> VOID namevar LPAREN arguments . RPAREN LBRACE function_content return_stat2 RBRACE

    RPAREN          shift and go to state 40


state 33

    (29) program -> VOID MAIN LPAREN RPAREN . LBRACE function_content RBRACE

    LBRACE          shift and go to state 41


state 34

    (45) varlist -> namevar COMMA varlist .

    SEMICOLON       reduce using rule 45 (varlist -> namevar COMMA varlist .)


state 35

    (46) varlist -> pointer . COMMA varlist
    (48) varlist -> pointer .

    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 48 (varlist -> pointer .)


state 36

    (46) varlist -> pointer COMMA varlist .

    SEMICOLON       reduce using rule 46 (varlist -> pointer COMMA varlist .)


state 37

    (10) function_dec -> datatype pointer LPAREN arguments . RPAREN SEMICOLON
    (17) function_body -> datatype pointer LPAREN arguments . RPAREN LBRACE function_content return_stat RBRACE

    RPAREN          shift and go to state 42


state 38

    (13) arguments -> datatype namevar .
    (15) arguments -> datatype namevar . COMMA arguments

    RPAREN          reduce using rule 13 (arguments -> datatype namevar .)
    COMMA           shift and go to state 43


state 39

    (12) arguments -> datatype pointer .
    (14) arguments -> datatype pointer . COMMA arguments

    RPAREN          reduce using rule 12 (arguments -> datatype pointer .)
    COMMA           shift and go to state 44


state 40

    (11) function_dec -> VOID namevar LPAREN arguments RPAREN . SEMICOLON
    (18) function_body -> VOID namevar LPAREN arguments RPAREN . LBRACE function_content return_stat2 RBRACE

    SEMICOLON       shift and go to state 46
    LBRACE          shift and go to state 45


state 41

    (29) program -> VOID MAIN LPAREN RPAREN LBRACE . function_content RBRACE
    (30) function_content -> . assignment_statement
    (31) function_content -> . while_stat
    (32) function_content -> . if_stat
    (33) function_content -> . function_call
    (34) function_content -> . assignment_statement function_content
    (35) function_content -> . while_stat function_content
    (36) function_content -> . if_stat function_content
    (37) function_content -> . function_call function_content
    (38) function_content -> . declaration
    (39) function_content -> . declaration function_content
    (40) function_content -> . epsilon
    (51) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (52) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (53) assignment_statement -> . ID EQUAL function_call
    (54) assignment_statement -> . LEFT EQUAL function_call
    (75) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (76) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (77) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (23) function_call -> . NAME LPAREN arglist RPAREN SEMICOLON
    (24) function_call -> . NAME LPAREN RPAREN SEMICOLON
    (41) declaration -> . datatype varlist SEMICOLON
    (89) epsilon -> .
    (55) ID -> . NAME
    (56) LEFT -> . ASTERISK var
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

    WHILE           shift and go to state 49
    IF              shift and go to state 57
    NAME            shift and go to state 47
    RBRACE          reduce using rule 89 (epsilon -> .)
    ASTERISK        shift and go to state 54
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

    epsilon                        shift and go to state 53
    function_content               shift and go to state 58
    while_stat                     shift and go to state 59
    datatype                       shift and go to state 60
    if_stat                        shift and go to state 51
    assignment_statement           shift and go to state 50
    function_call                  shift and go to state 48
    declaration                    shift and go to state 55
    ID                             shift and go to state 56
    LEFT                           shift and go to state 52

state 42

    (10) function_dec -> datatype pointer LPAREN arguments RPAREN . SEMICOLON
    (17) function_body -> datatype pointer LPAREN arguments RPAREN . LBRACE function_content return_stat RBRACE

    SEMICOLON       shift and go to state 62
    LBRACE          shift and go to state 61


state 43

    (15) arguments -> datatype namevar COMMA . arguments
    (12) arguments -> . datatype pointer
    (13) arguments -> . datatype namevar
    (14) arguments -> . datatype pointer COMMA arguments
    (15) arguments -> . datatype namevar COMMA arguments
    (16) arguments -> . epsilon
    (42) datatype -> . INT
    (43) datatype -> . FLOAT
    (89) epsilon -> .

    INT             shift and go to state 10
    FLOAT           shift and go to state 9
    RPAREN          reduce using rule 89 (epsilon -> .)

    datatype                       shift and go to state 30
    epsilon                        shift and go to state 31
    arguments                      shift and go to state 63

state 44

    (14) arguments -> datatype pointer COMMA . arguments
    (12) arguments -> . datatype pointer
    (13) arguments -> . datatype namevar
    (14) arguments -> . datatype pointer COMMA arguments
    (15) arguments -> . datatype namevar COMMA arguments
    (16) arguments -> . epsilon
    (42) datatype -> . INT
    (43) datatype -> . FLOAT
    (89) epsilon -> .

    INT             shift and go to state 10
    FLOAT           shift and go to state 9
    RPAREN          reduce using rule 89 (epsilon -> .)

    datatype                       shift and go to state 30
    epsilon                        shift and go to state 31
    arguments                      shift and go to state 64

state 45

    (18) function_body -> VOID namevar LPAREN arguments RPAREN LBRACE . function_content return_stat2 RBRACE
    (30) function_content -> . assignment_statement
    (31) function_content -> . while_stat
    (32) function_content -> . if_stat
    (33) function_content -> . function_call
    (34) function_content -> . assignment_statement function_content
    (35) function_content -> . while_stat function_content
    (36) function_content -> . if_stat function_content
    (37) function_content -> . function_call function_content
    (38) function_content -> . declaration
    (39) function_content -> . declaration function_content
    (40) function_content -> . epsilon
    (51) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (52) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (53) assignment_statement -> . ID EQUAL function_call
    (54) assignment_statement -> . LEFT EQUAL function_call
    (75) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (76) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (77) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (23) function_call -> . NAME LPAREN arglist RPAREN SEMICOLON
    (24) function_call -> . NAME LPAREN RPAREN SEMICOLON
    (41) declaration -> . datatype varlist SEMICOLON
    (89) epsilon -> .
    (55) ID -> . NAME
    (56) LEFT -> . ASTERISK var
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

    WHILE           shift and go to state 49
    IF              shift and go to state 57
    NAME            shift and go to state 47
    RETURN          reduce using rule 89 (epsilon -> .)
    RBRACE          reduce using rule 89 (epsilon -> .)
    ASTERISK        shift and go to state 54
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

    epsilon                        shift and go to state 53
    function_content               shift and go to state 65
    while_stat                     shift and go to state 59
    datatype                       shift and go to state 60
    if_stat                        shift and go to state 51
    assignment_statement           shift and go to state 50
    function_call                  shift and go to state 48
    declaration                    shift and go to state 55
    LEFT                           shift and go to state 52
    ID                             shift and go to state 56

state 46

    (11) function_dec -> VOID namevar LPAREN arguments RPAREN SEMICOLON .

    VOID            reduce using rule 11 (function_dec -> VOID namevar LPAREN arguments RPAREN SEMICOLON .)
    INT             reduce using rule 11 (function_dec -> VOID namevar LPAREN arguments RPAREN SEMICOLON .)
    FLOAT           reduce using rule 11 (function_dec -> VOID namevar LPAREN arguments RPAREN SEMICOLON .)
    $end            reduce using rule 11 (function_dec -> VOID namevar LPAREN arguments RPAREN SEMICOLON .)


state 47

    (23) function_call -> NAME . LPAREN arglist RPAREN SEMICOLON
    (24) function_call -> NAME . LPAREN RPAREN SEMICOLON
    (55) ID -> NAME .

    LPAREN          shift and go to state 66
    EQUAL           reduce using rule 55 (ID -> NAME .)


state 48

    (33) function_content -> function_call .
    (37) function_content -> function_call . function_content
    (30) function_content -> . assignment_statement
    (31) function_content -> . while_stat
    (32) function_content -> . if_stat
    (33) function_content -> . function_call
    (34) function_content -> . assignment_statement function_content
    (35) function_content -> . while_stat function_content
    (36) function_content -> . if_stat function_content
    (37) function_content -> . function_call function_content
    (38) function_content -> . declaration
    (39) function_content -> . declaration function_content
    (40) function_content -> . epsilon
    (51) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (52) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (53) assignment_statement -> . ID EQUAL function_call
    (54) assignment_statement -> . LEFT EQUAL function_call
    (75) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (76) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (77) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (23) function_call -> . NAME LPAREN arglist RPAREN SEMICOLON
    (24) function_call -> . NAME LPAREN RPAREN SEMICOLON
    (41) declaration -> . datatype varlist SEMICOLON
    (89) epsilon -> .
    (55) ID -> . NAME
    (56) LEFT -> . ASTERISK var
    (42) datatype -> . INT
    (43) datatype -> . FLOAT

  ! reduce/reduce conflict for RBRACE resolved using rule 33 (function_content -> function_call .)
  ! reduce/reduce conflict for RETURN resolved using rule 33 (function_content -> function_call .)
    RBRACE          reduce using rule 33 (function_content -> function_call .)
    RETURN          reduce using rule 33 (function_content -> function_call .)
    WHILE           shift and go to state 49
    IF              shift and go to state 57
    NAME            shift and go to state 47
    ASTERISK        shift and go to state 54
    INT             shift and go to state 10
    FLOAT           shift and go to state 9

  ! RBRACE          [ reduce using rule 89 (epsilon -> .) ]
  ! RETURN          [ reduce using rule 89 (epsilon -> .) ]

    epsilon                        shift and go to state 53
    function_content               shift and go to state 67
    while_stat                     shift and go to state 59
    datatype                       shift and go to state 60
    if_stat                        shift and go to state 51
    assignment_statement           shift and go to state 50
    function_call                  shift and go to state 48
    declaration                    shift and go to state 55
    ID                             shift and go to state 56
    LEFT                           shift and go to state 52

state 49

    (75) while_stat -> WHILE . LPAREN b_expression RPAREN code_block

    LPAREN          shift and go to state 68


state 50

    (30) function_content -> assignment_statement .
    (34) function_content -> assignment_statement . function_content
    (30) function_content -> . assignment_statement
    (31) function_content -> . while_stat
    (32) function_content -> . if_stat
    (33) function_content -> . function_call
    (34) function_content -> . assignment_statement function_content
    (35) function_content -> . while_stat function_content
    (36) function_content -> . if_stat function_content
    (37) function_content -> . function_call function_content
    (38) function_content -> . declaration
    (39) function_content -> . declaration function_content
    (40) function_content -> . epsilon
    (51) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (52) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (53) assignment_statement -> . ID EQUAL function_call
    (54) assignment_statement -> . LEFT EQUAL function_call
    (75) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (76) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (77) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (23) function_call -> . NAME LPAREN arglist RPAREN SEMICOLON
    (24) function_call -> . NAME LPAREN RPAREN SEMICOLON
    (41) declaration -> . datatype varlist SEMICOLON
    (89) epsilon -> .
    (55) ID -> . NAME
    (56) LEFT -> . ASTERISK var
    (42) datatype -> . INT
    (43) datatype -> . FLOAT
